--- a/doc/README
+++ b/doc/README
@@ -1,5 +1,5 @@
 README for boaidp, version 1.3
-Feb 14th, 2012
+March 14th, 2012
 
 This is an implementation of Moodle's Block for preloading (in a bulk and automation mode) of metadata 
 associated to Moodle's Courses and their further edition (in a manually mode).
@@ -9,7 +9,10 @@ The main aims of these metadata is to connect with OAI-PMH 2.0 Data Provider imp
 This Moodle's Block is written in PHP, following the Moodle Development/Contributions guidelines/recommendations.
 
 
-GETTING ON SOURCEFORGE
+GETTING ON GITHUB
+https://github.com/mglaredo/moodle-block_boaidp
+
+GETTING ON SOURCEFORGE (deprecated) Only up to date until 1.2 version
 https://sourceforge.net/projects/boaidpformoodle/files/
 
 
