doc/README updated

--- a/doc/README
+++ b/doc/README
@@ -4,7 +4,7 @@ March 14th, 2012
 This is an implementation of Moodle's Block for preloading (in a bulk and automation mode) of metadata 
 associated to Moodle's Courses and their further edition (in a manually mode).
 
-The main aims of these metadata is to connect with OAI-PMH 2.0 Data Provider implementations.
+The main aims of these metadata is to serve as basis (Data Provider) for OAI-PMH 2.0 Harvester implementations.
 
 This Moodle's Block is written in PHP, following the Moodle Development/Contributions guidelines/recommendations.
 
