--- a/doc/TODO
+++ b/doc/TODO
@@ -19,3 +19,6 @@
         http://xref.moodle.org/blocks/moodleblock.class.php.source.html#l749
         http://moodle.org/mod/forum/discuss.php?d=169931#p856571
 </DONE! 07/03/2012>
+
+(Jul 17th, 2013)
+- Finish refactoring for Moodle 2.x.
