--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -29,3 +29,10 @@ Changes in version 1.3 (Feb xxx, 2012)
     *  (19th)	- New version of db/install.xml (Warning! -> needed PREVIOUS/NEXT attributes in TABLE tag)
 				- New version of db/upgrade.php 
 				- Cron disabled.
+
+Changes in version 2.0 (Jul xxx, 2013)
+    * (17th)	- Complete rewriting of block for Moodle 2.x (currently 2.5) . 
+				- At this basic version only static predefined fields are present on block instance configuration. 
+				- No dynamic creation of metadata schema.
+				- No additional tables.
+				- No preload fields values (users must fill manually).
