--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -38,3 +38,4 @@ Changes in version 2.0 (Jul xxx, 2013)
 				- No preload fields values (users must fill manually).
 	* (18th)	- Adding GLOBAL SETTING for customizing Metadata Element Set (+setting.php) and
 					dynamic including on form_edit.php for Course Block's instance edition.
+	* (23th)	- Added BETA support for OAI-PMH interface on folder phpoai2 through http://<moodlehost>/blocks/boaidp/phpoai2/ 
